2009-02-17  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* configure.in: Check for mkstemps on MinGW platform
	(HAVE_MKSTEMPS): Define if mkstsmps is avilable in libiberty.

2009-02-17  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Mention cummin and cummax

2009-02-17  John W. Eaton  <jwe@octave.org>

	* aclocal.m4 (OCTAVE_PROG_GPERF): Don't run gperf.

	* Makeconf.in (do-subst-config-vals): Substitute CARBON_LIBS,
	X11_INCFLAGS, and X11_LIBS.

2009-02-17  Thomas Treichl  <Thomas.Treichl@gmx.net>

	* Makeconf.in: Substitute CARBON_LIBS.
	* configure.in: Use CARBON_LIBS instead of LIBS for framework Carbon.

	* configure.in: Fix test for X11 if "--without-x" is given.

2009-02-16  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Yet more updates.

2009-02-16  John W. Eaton  <jwe@octave.org>

	* NEWS: Mention command-style parsing changes.  More updates.

2009-02-13  John W. Eaton  <jwe@octave.org>

	* NEWS: Update for release.

2009-02-11 Thomas Treichl <Thomas.Treichl@gmx.net>

	* aclocal.m4 (OCTAVE_GLUTESSCALLBACK_THREEDOTS): New macro.
	(OCTAVE_OPENGL): Use it in OpenGL check.

2009-02-11 Ben Abbott <bpabbott@mac.com>

	* configure.in: Include FTGLTextureFont.h when FTGL_UPPER_CASE is
	not defined.

2009-02-11  John W. Eaton  <jwe@octave.org>

	* configure.in (octetcdir): New default value.
	* Makeconf.in (octetcdir): New variable.
	(do-subst-default-vals): Substitute octetcdir.
	* octMakefile.in (install, uninstall): Use $(octetcdir) for NEWS.
	(DIRS_TO_MAKE): Add $(octetcdir) to the list.

2009-02-10  Rafael Laboissiere  <rafael@debian.org>

	* examples/Makefile.in: Run some clean targets on sub-directory
	@polynomial.

2009-02-09  John W. Eaton  <jwe@octave.org>

	* examples/Makefile.in (dist): Create subdirs of examples, not scripts.

	* examples/@polynomial/Makefile.in (do-mkpkgadd):
	Provide special definition for this directory.

	* examples/Makefile.in (EXAMPLE_SOURCES): Delete unused variable.
	(SUBDIRS, DISTSUBDIRS): Don't reset to empty.
