@@ -1,3 +1,12 @@
+2009-02-24  Thorsten Meyer  <thorsten@hexe>
+
+	* Makefile.in: Rename to Makefile.
+	* configure.in: Remove Makefile from list of autogenerated
+	configuration files.
+	* octMakefile.in: Remove references to Makefile.in, add Makefile
+	to list of CONF_DISTFILES.
+	* octMakefile.in (maintainer-clean distclean): Don't delete Makefile.
+
 2009-02-17  Benjamin Lindner  <lindnerb@users.sourceforge.net>
 
 	* configure.in: Check for mkstemps on MinGW platform
